--- a/django_basico/base/global/base.html
+++ b/django_basico/base/global/base.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
+{% load static %}<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+    <title>{{ title }}Site do Allyson</title>
+    <link rel="stylesheet" href="{% static "global/css/estilo.css" %}">
   </head>
   <body>
+    {% include "global/partials/menu.html" %}
     <h1>{% block texto %}BASE{% endblock texto %}</h1>
   </body>
 </html>
